--- a/sass/components/_modal.sass
+++ b/sass/components/_modal.sass
@@ -1,4 +1,11 @@
 .modal
+  // position: absolute
+  // top: 0
+  // right: 0
+  // bottom: 0
+  // left: 0
+  // width: 100%
+  // min-height: 100vh
   font-size: 12px
   color: $true-white
   &__overlay,
@@ -10,6 +17,7 @@
       opacity: 1
       visibility: visible
       transition: 0.3s
+      overflow-y: auto
   &__overlay
     position: fixed
     top: 0
@@ -17,7 +25,7 @@
     bottom: 0
     left: 0
     width: 100%
-    height: 100%
+    min-height: 100vh
     background-color: rgba(0, 143, 223, 0.39)
     z-index: 101
     cursor: pointer
