--- a/style/style.css
+++ b/style/style.css
@@ -2485,6 +2485,7 @@ p {
   visibility: visible;
   -webkit-transition: 0.3s;
   transition: 0.3s;
+  overflow-y: auto;
 }
 
 .modal__overlay {
@@ -2494,7 +2495,7 @@ p {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   background-color: rgba(0, 143, 223, 0.39);
   z-index: 101;
   cursor: pointer;
@@ -2880,6 +2881,9 @@ p {
   .footer-form__input {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
+  }
+  .modal-dialog {
+    width: 90%;
   }
   .modal-form__button {
     -webkit-box-ordinal-group: 3;
@@ -3342,6 +3346,19 @@ p {
     padding: 20px 30px;
   }
   .packages-card--wide .packages-card-info__spec-list {
+    margin-bottom: 20px;
+  }
+  .modal-dialog {
+    width: 95%;
+  }
+}
+
+@media screen and (max-height: 500px) {
+  .modal-dialog {
+    height: 97vh;
+    overflow-y: auto;
+  }
+  .modal-form {
     margin-bottom: 20px;
   }
 }
